feat(backend): implement Member 4 & 5 security, data APIs, immutable DTOs, and feature-wise package restructuring