@@ -1,12 +1,14 @@
 package com.cpclub.backend.user;
 
-import com.cpclub.backend.user.UpdateHandleRequest;
-import com.cpclub.backend.user.UserProfileUpdateRequest;
-import com.cpclub.backend.user.UserResponseDto;
-import com.cpclub.backend.entity.Role;
-import com.cpclub.backend.common.GlobalExceptionHandler;
-import com.cpclub.backend.common.ResourceNotFoundException;
-import com.cpclub.backend.user.UserService;
+import com.cpclub.backend.common.dto.PagedResponse;
+import com.cpclub.backend.common.exception.GlobalExceptionHandler;
+import com.cpclub.backend.common.exception.ResourceNotFoundException;
+import com.cpclub.backend.user.controller.UserController;
+import com.cpclub.backend.user.dto.UpdateHandleRequest;
+import com.cpclub.backend.user.dto.UserProfileUpdateRequest;
+import com.cpclub.backend.user.dto.UserResponseDto;
+import com.cpclub.backend.user.entity.Role;
+import com.cpclub.backend.user.service.UserService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -15,8 +17,7 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -29,39 +30,50 @@ class UserControllerTest {
 
     private MockMvc mockMvc;
     private UserService userService;
-    private com.cpclub.backend.codeforces.CodeforcesSyncService codeforcesSyncService;
 
     @BeforeEach
     void setUp() {
         userService = mock(UserService.class);
-        codeforcesSyncService = mock(com.cpclub.backend.codeforces.CodeforcesSyncService.class);
-        UserController userController = new UserController(userService, codeforcesSyncService);
+        UserController userController = new UserController(userService);
         mockMvc = MockMvcBuilders.standaloneSetup(userController)
                 .setControllerAdvice(new GlobalExceptionHandler())
                 .build();
     }
 
     @Test
-    @DisplayName("GET /api/users - Should return list of all users wrapped in ApiResponse")
+    @DisplayName("GET /api/users/all - Should return list of all users")
     void shouldGetAllUsers() throws Exception {
-        UserResponseDto u1 = new UserResponseDto(1L, "Alice", "alice_cf", 1600, Role.ROLE_USER, LocalDateTime.now());
-        UserResponseDto u2 = new UserResponseDto(2L, "Bob", "bob_cf", 1800, Role.ROLE_ADMIN, LocalDateTime.now());
+        UserResponseDto u1 = new UserResponseDto(1L, "Alice", "alice@example.com", "alice_cf", 1600, Role.ROLE_USER, LocalDateTime.now(), LocalDateTime.now());
+        UserResponseDto u2 = new UserResponseDto(2L, "Bob", "bob@example.com", "bob_cf", 1800, Role.ROLE_ADMIN, LocalDateTime.now(), LocalDateTime.now());
 
-        when(userService.getAllUsers()).thenReturn(Arrays.asList(u1, u2));
+        when(userService.getAllUsers()).thenReturn(List.of(u1, u2));
 
-        mockMvc.perform(get("/api/users"))
+        mockMvc.perform(get("/api/users/all"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success", is(true)))
-                .andExpect(jsonPath("$.statusCode", is(200)))
                 .andExpect(jsonPath("$.data", hasSize(2)))
                 .andExpect(jsonPath("$.data[0].name", is("Alice")))
                 .andExpect(jsonPath("$.data[1].name", is("Bob")));
     }
 
     @Test
+    @DisplayName("GET /api/users - Should return members directory")
+    void shouldGetMembersDirectory() throws Exception {
+        UserResponseDto u1 = new UserResponseDto(1L, "Alice", "alice@example.com", "alice_cf", 1600, Role.ROLE_USER, LocalDateTime.now(), LocalDateTime.now());
+        PagedResponse<UserResponseDto> paged = new PagedResponse<>(List.of(u1), 0, 20, 1L, 1, true);
+
+        when(userService.getMembersDirectory(null, 0, 20)).thenReturn(paged);
+
+        mockMvc.perform(get("/api/users"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success", is(true)))
+                .andExpect(jsonPath("$.data.content[0].name", is("Alice")));
+    }
+
+    @Test
     @DisplayName("GET /api/users/{id} - Should return user when found")
     void shouldGetUserByIdWhenFound() throws Exception {
-        UserResponseDto user = new UserResponseDto(5L, "Charlie", "charlie_cf", 2000, Role.ROLE_USER, LocalDateTime.now());
+        UserResponseDto user = new UserResponseDto(5L, "Charlie", "charlie@example.com", "charlie_cf", 2000, Role.ROLE_USER, LocalDateTime.now(), LocalDateTime.now());
 
         when(userService.getUserById(5L)).thenReturn(user);
 
@@ -82,34 +94,17 @@ class UserControllerTest {
         mockMvc.perform(get("/api/users/999"))
                 .andExpect(status().isNotFound())
                 .andExpect(jsonPath("$.success", is(false)))
-                .andExpect(jsonPath("$.statusCode", is(404)))
                 .andExpect(jsonPath("$.message", containsString("User not found with id: 999")));
-    }
-
-    @Test
-    @DisplayName("GET /api/users/leaderboard - Should return users sorted by rating")
-    void shouldGetLeaderboard() throws Exception {
-        UserResponseDto topUser = new UserResponseDto(1L, "Top Coder", "tourist", 3500, Role.ROLE_USER, LocalDateTime.now());
-
-        when(userService.getLeaderboard()).thenReturn(Collections.singletonList(topUser));
-
-        mockMvc.perform(get("/api/users/leaderboard"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success", is(true)))
-                .andExpect(jsonPath("$.data", hasSize(1)))
-                .andExpect(jsonPath("$.data[0].codeforcesHandle", is("tourist")))
-                .andExpect(jsonPath("$.data[0].rating", is(3500)));
     }
 
     @Test
     @DisplayName("PUT /api/users/{id}/handle - Should update Codeforces handle")
     void shouldUpdateCodeforcesHandle() throws Exception {
-        UserResponseDto updatedUser = new UserResponseDto(1L, "Alice", "new_cf_handle", 1600, Role.ROLE_USER, LocalDateTime.now());
+        UserResponseDto updatedUser = new UserResponseDto(1L, "Alice", "alice@example.com", "new_cf_handle", 1600, Role.ROLE_USER, LocalDateTime.now(), LocalDateTime.now());
 
         when(userService.updateCodeforcesHandle(eq(1L), any(UpdateHandleRequest.class))).thenReturn(updatedUser);
-        when(userService.getUserById(eq(1L))).thenReturn(updatedUser);
 
-        String jsonPayload = "{\"codeforcesHandle\":\"new_cf_handle\"}";
+        String jsonPayload = "{\"handle\":\"new_cf_handle\"}";
 
         mockMvc.perform(put("/api/users/1/handle")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -120,35 +115,15 @@ class UserControllerTest {
     }
 
     @Test
-    @DisplayName("PUT /api/users/{id}/handle - Should return 400 Bad Request on invalid handle format")
-    void shouldReturn400OnInvalidHandleFormat() throws Exception {
-        String invalidJsonPayload = "{\"codeforcesHandle\":\"a!\"}";
+    @DisplayName("PUT /api/users/{id}/handle - Should return 400 Bad Request on blank handle")
+    void shouldReturn400OnBlankHandle() throws Exception {
+        String invalidJsonPayload = "{\"handle\":\"\"}";
 
         mockMvc.perform(put("/api/users/1/handle")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(invalidJsonPayload))
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.success", is(false)))
-                .andExpect(jsonPath("$.statusCode", is(400)))
                 .andExpect(jsonPath("$.message", containsString("Validation failed")));
-    }
-
-    @Test
-    @DisplayName("PUT /api/users/{id}/profile - Should update User profile name and handle")
-    void shouldUpdateUserProfile() throws Exception {
-        UserResponseDto updatedUser = new UserResponseDto(1L, "New Name", "valid_handle", 1600, Role.ROLE_USER, LocalDateTime.now());
-
-        when(userService.updateUserProfile(eq(1L), any(UserProfileUpdateRequest.class))).thenReturn(updatedUser);
-        when(userService.getUserById(eq(1L))).thenReturn(updatedUser);
-
-        String jsonPayload = "{\"name\":\"New Name\",\"codeforcesHandle\":\"valid_handle\"}";
-
-        mockMvc.perform(put("/api/users/1/profile")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(jsonPayload))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success", is(true)))
-                .andExpect(jsonPath("$.data.name", is("New Name")))
-                .andExpect(jsonPath("$.data.codeforcesHandle", is("valid_handle")));
     }
 }
